fix spacing for small categories

--- a/src/modules/Home.module.css
+++ b/src/modules/Home.module.css
@@ -1,7 +1,7 @@
 .categoriesWrapper {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-right: -1%;
   margin-left: -1%;
 }
