--- a/src/modules/Reviews.module.css
+++ b/src/modules/Reviews.module.css
@@ -1,7 +1,7 @@
 .reviewsWrapper {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-right: -1%;
   margin-left: -1%;
 }
